docs/envoy/v1.13.0/_sources/api-v3/config/metrics/v3/metrics_service.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/metrics/v3/metrics_service.proto:

Metrics service
===============


.. _envoy_v3_api_msg_config.metrics.v3.MetricsServiceConfig:

config.metrics.v3.MetricsServiceConfig
--------------------------------------

`[config.metrics.v3.MetricsServiceConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.13.0/api/envoy/config/metrics/v3/metrics_service.proto#L20>`_

Metrics Service is configured as a built-in *envoy.metrics_service* :ref:`StatsSink
<envoy_v3_api_msg_config.metrics.v3.StatsSink>`. This opaque configuration will be used to create
Metrics Service.

.. _extension_envoy.stat_sinks.metrics_service:


This extension may be referenced by the qualified name *envoy.stat_sinks.metrics_service*

.. note::
  

  This extension does not operate on the data plane and hence is intended to be robust against untrusted traffic.

.. code-block:: json

  {
    "grpc_service": "{...}"
  }

.. _envoy_v3_api_field_config.metrics.v3.MetricsServiceConfig.grpc_service:

grpc_service
  (:ref:`config.core.v3.GrpcService <envoy_v3_api_msg_config.core.v3.GrpcService>`, *REQUIRED*) The upstream gRPC cluster that hosts the metrics service.
  
  

